--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+02_Data[[:space:]]Manipulation/Part[[:space:]]C[[:space:]]-[[:space:]]Pandas/data/survey_results_public.csv filter=lfs diff=lfs merge=lfs -text
 02_Data[[:space:]]Manipulation/**/*.csv filter=lfs diff=lfs merge=lfs -text
